--- a/style/project-style.css
+++ b/style/project-style.css
@@ -1,8 +1,14 @@
+@font-face {
+    font-family: Conthrax;
+    src: url('./font/Conthrax-BLRLraCV.otf');
+}
+
 :root {
     --primary: #000;
     --secondary: #fff;
 
     color: var(--secondary);
+    font-family: 'Conthrax', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 * {
@@ -13,31 +19,34 @@ body {
     background-color: var(--primary);
 }
 
+/* Generic Classes */
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* Specific Classes */
+
 .page-num {
     position: fixed;
     bottom: 0px;
     right: 0px;
 
-    width: 60px;
+    width: 80px;
 }
 
 .page-num p {
     margin: 5px;
 }
 
-#navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
+/* #navbar {
+
+} */
 
 #navbar .left-nav-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
     font-size: 12px;
 
     width: 35%;
@@ -45,4 +54,33 @@ body {
 
 #navbar .left-nav-container img {
     width: 50px;
+}
+
+#navbar .hamburger-button {
+    background: none;
+    border: 0;
+}
+
+#navbar .hamburger-button:hover {
+    cursor: pointer;
+}
+
+.page-nav {
+}
+
+.arrow-button {
+    background: none;
+    border: none;
+}
+
+.arrow-button:hover {
+    cursor: pointer;
+}
+
+/* .arrow-button:hover img {
+} */
+
+.arrow-button img {
+    width: 40px;
+    height: 20px;
 }
