--- a/style/project-style.css
+++ b/style/project-style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Conthrax;
-    src: url('./font/Conthrax-BLRLraCV.otf');
+    src: url('../font/Conthrax-BLRLraCV.otf');
 }
 
 :root {
@@ -83,4 +83,27 @@ body {
 .arrow-button img {
     width: 40px;
     height: 20px;
+}
+
+.page {
+    margin: 0 50px 0 100px;
+}
+
+.page .year-range {
+    width: 15%;
+}
+
+.page .project-title {
+    width: 20%;
+    font-size: 24px;
+}
+
+.page .description {
+    width: 65%;
+}
+
+/* IMPORTANT CLASSES */
+
+.hidden {
+    display: none;
 }
