--- a/style/project-style.css
+++ b/style/project-style.css
@@ -6,6 +6,7 @@
 :root {
     --primary: #000;
     --secondary: #fff;
+    --tertiary: #666;
 
     color: var(--secondary);
     font-family: 'Conthrax', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -17,6 +18,7 @@
 
 body {
     background-color: var(--primary);
+    margin: 0;
 }
 
 /* Generic Classes */
@@ -28,12 +30,54 @@ body {
     justify-content: space-between;
 }
 
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
 /* Specific Classes */
+
+#sidebar-nav {
+    position: absolute;
+    right: 0;
+    width: 150px;
+    height: 100%;
+    background-color: var(--tertiary);
+    z-index: 10;
+}
+
+#sidebar-nav>button {
+    margin-left: 120px;
+    margin-top: 10px;
+    width: 25px;
+    height: 25px;
+    padding: 0;
+
+    background: none;
+    border: none;
+}
+
+#sidebar-nav>button:hover {
+    cursor: pointer;
+}
+
+#sidebar-nav div button {
+    border: 2px solid black;
+    background: none;
+    margin: 10px 0 10px 0;
+}
+
+#sidebar-nav div button:hover {
+    cursor: pointer
+}
 
 .page-num {
     position: fixed;
     bottom: 0px;
     right: 0px;
+    z-index: 5;
 }
 
 .page-num p {
