--- a/style/project-style.css
+++ b/style/project-style.css
@@ -40,12 +40,14 @@ body {
 /* Specific Classes */
 
 #sidebar-nav {
-    position: absolute;
-    right: 0;
+    position: fixed;
+    right: -150px;
     width: 150px;
     height: 100%;
     background-color: var(--tertiary);
     z-index: 10;
+
+    transition: all ease-in-out 250ms;
 }
 
 #sidebar-nav>button {
@@ -149,3 +151,9 @@ body {
 .hidden {
     display: none;
 }
+
+#sidebar-nav.sidebar-shown {
+    right: 0px;
+}
+
+/* ANIMATIONS */
