--- a/style/project-style.css
+++ b/style/project-style.css
@@ -6,14 +6,14 @@
 :root {
     --primary: #000;
     --secondary: #fff;
-    --tertiary: #666;
+    --tertiary: #333;
 
     color: var(--secondary);
-    font-family: 'Conthrax', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 * {
     color: var(--secondary);
+    font-family: 'Conthrax', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 body {
@@ -66,7 +66,7 @@ body {
 }
 
 #sidebar-nav div button {
-    border: 2px solid black;
+    border: 2px solid var(--secondary);
     background: none;
     margin: 10px 0 10px 0;
 }
@@ -92,10 +92,13 @@ body {
 
 #navbar .left-nav-container {
     font-size: 12px;
-
-    width: 35%;
+    
+    width: auto;
 }
 
+#navbar .left-nav-container p {
+    margin: 0 10px 0 10px;
+}
 #navbar .left-nav-container img {
     width: 50px;
 }
